# django-vs-litestar

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 758ae71ff489_initial_schema.py
core/: async_queries.py  database.py  ingestion.py  logging_config.py  models.py  processing.py  queries.py
django_api/: manage.py
django_api/config/: settings.py  urls.py
django_api/satellites/: serializers.py  urls.py  views.py
fastapi_api/: app.py
fastapi_api/satellites/: router.py  schemas.py
flask_api/: app.py
flask_api/satellites/: schemas.py  views.py
litestar_api/: app.py
litestar_api/satellites/: controllers.py  schemas.py
specs/: architecture.md  plan.md  requirements.md
tests/: conftest.py  test_django_api.py  test_fastapi_api.py  test_flask_api.py  test_ingestion.py  test_litestar_api.py  test_processing.py
