[project]
name = "django-vs-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "click>=8.3.2",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "litestar>=2.21.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-json-logger>=3.3",
    "sgp4>=2.25",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "respx>=0.23.1",
]
